// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
package geist.meta.v1alpha;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "geist/rpc/pagination.proto";

service UserService {
    rpc GetUser(UserRequest) returns (UserResponse) {}
    rpc ListUsers(ListUsersRequest) returns (UserResponse) {}
    rpc CreateUser(MutateUserRequest) returns (UserResponse) {}
    rpc UpdateUser(MutateUserRequest) returns (UserResponse) {}
    rpc DeleteUser(MutateUserRequest) returns (UserResponse) {}
}

message UserRequest {
    oneof params {
        string uid = 1 [(buf.validate.field).string.uuid = true];
        string name = 2;
        string email = 3 [(buf.validate.field).string.email = true];
        string username = 4;
    }
    geist.rpc.Pagination page = 5;
}

message UserResponse {
    repeated User users = 1;
    geist.rpc.Pagination page = 2;
}

message ListUsersRequest {
    geist.rpc.Pagination page = 1;
}

message User {
    string uid = 1 [(buf.validate.field).string.uuid = true];
    string name = 2;
    string email = 3 [(buf.validate.field).string.email = true];
    string username = 4;
    string avatar_url = 5;
    string bio = 6;
    string location = 7;
    map<string, string> links = 8;
    google.protobuf.Timestamp create_time = 9;
    google.protobuf.Timestamp update_time = 10;
    google.protobuf.Timestamp delete_time = 11;
}
